:sparkles: Adiciona Tabbed Paciente

--- a/MedClin/MedClin/Views/PacienteView.xaml
+++ b/MedClin/MedClin/Views/PacienteView.xaml
@@ -8,6 +8,11 @@
   <ContentPage.BindingContext>
     <viewModels:PacienteViewModel/>
   </ContentPage.BindingContext>
+  
+  <StackLayout>
+    <Label Text="Paciente" TextColor="Black"></Label>
+    <Button Text="detalhe" Command="{Binding PacienteSelectCommand}"/>
+  </StackLayout>
 
 
 </ContentPage>
